--- a/alan-config/src/main/resources/application.properties
+++ b/alan-config/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=alan-config
 info.contact.email=sihan2@staff.sina.com.cn
 
 server.port=8888
-spring.cloud.config.server.git.uri=http://git.intra.weibo.com/openapi/alan.git
+spring.cloud.config.server.git.uri=https://github.com/seagrape/SpringCloudConfig.git
 spring.cloud.config.server.git.searchPaths=alan-config-repo
 spring.cloud.config.server.git.username=sihan2
 spring.cloud.config.server.git.password=MYPASSWORD
