--- a/alan-config/src/main/resources/application.properties
+++ b/alan-config/src/main/resources/application.properties
@@ -5,8 +5,8 @@ info.contact.email=sihan2@staff.sina.com.cn
 server.port=8888
 spring.cloud.config.server.git.uri=https://github.com/seagrape/SpringCloudConfig.git
 spring.cloud.config.server.git.searchPaths=alan-config-repo
-spring.cloud.config.server.git.username=sihan2
-spring.cloud.config.server.git.password=MYPASSWORD
+#spring.cloud.config.server.git.username=sihan2
+#spring.cloud.config.server.git.password=MYPASSWORD
 
 spring.cloud.stream.kafka.binder.brokers=10.79.96.52:9092
 spring.cloud.stream.kafka.binder.zk-nodes=10.79.96.52:2182
