--- a/alan-demo/alan-demo-config-client/src/main/resources/bootstrap.properties
+++ b/alan-demo/alan-demo-config-client/src/main/resources/bootstrap.properties
@@ -1,2 +1,3 @@
-
-
+spring.cloud.config.uri=http://127.0.0.1:${config.port:8888}
+#spring.cloud.config.name=alan-provider-data-config
+#spring.cloud.config.profile=${config.profile:dev}
