--- a/alan-config/src/main/resources/application.properties
+++ b/alan-config/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.cloud.config.server.git.searchPaths=alan-config-repo
 #spring.cloud.config.server.git.password=MYPASSWORD
 
 spring.cloud.stream.kafka.binder.brokers=10.79.96.52:9092
-spring.cloud.stream.kafka.binder.zk-nodes=10.79.96.52:2182
+spring.cloud.stream.kafka.binder.zk-nodes=10..79.96.52:2182
